<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="data"
            type="sg.com.agentapp.setting.SettingFragment" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_myprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{(v) -> data.settingsItemOnClick(v, @id/action_settingFragment_to_myProfileFragement2, @string/settings_profile)}"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_userprofile_200px" />

            <TextView
                android:id="@+id/profileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/settings_profile"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_blockedlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{(v) -> data.settingsItemOnClick(v, @id/action_settingFragment_to_blockedListMain, @string/settings_blocked)}"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/blockedIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_block_200px" />

            <TextView
                android:id="@+id/blockedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_blocked"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{(v) -> data.settingsItemOnClick(v, @id/action_settingFragment_to_popupNotification, @string/settings_noti)}"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/popupIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_noti_200px" />

            <TextView
                android:id="@+id/popupLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_noti"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{(v) -> data.settingsItemOnClick(v, @id/action_settingFragment_to_reminder, @string/settings_reminder)}"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/reminderIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_time_200px" />

            <TextView
                android:id="@+id/reminderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_reminder"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_inviteagent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{data::inviteAgentOnClick}"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/inviteagentIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_inviteagent_200px"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/inviteagentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_invite"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{data::goToWebUrl}"
            android:tag="@string/settings_about_url"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/aboutIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_start_200px" />

            <TextView
                android:id="@+id/aboutLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_about"
                android:textColor="@color/black"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{data::goToWebUrl}"
            android:tag="@string/settings_faq_url"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/faqIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_faq_200px" />

            <TextView
                android:id="@+id/faqLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_faq"
                android:textColor="@color/black"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tnp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{data::goToWebUrl}"
            android:tag="@string/settings_terms_url"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tnpIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_tnp_200px" />

            <TextView
                android:id="@+id/tnpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_terms"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_contactus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{(v) -> data.settingsItemOnClick(v, @id/action_settingFragment_to_contactUs, @string/settings_contact)}"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/contactusIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_contactus_200px" />

            <TextView
                android:id="@+id/contactusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_contact"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>
</layout>